--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,9 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+# poetry
+poetry.lock
+
 # celery beat schedule file
 celerybeat-schedule
 
