--- a/.gitignore
+++ b/.gitignore
@@ -153,8 +153,8 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-.env
-.venv
+.env/
+.venv/
 env/
 venv/
 ENV/
@@ -197,4 +197,5 @@ tags
 # Persistent undo
 [._]*.un~
 
+# Configuration
 .lvimrc
