Fix casts not returning None when missing
* Revert raising on blank values
* Remove Env.str (use Env.get)

--- a/tests/.env
+++ b/tests/.env
@@ -1,3 +1,5 @@
+# shellcheck disable=SC2034
+BLANK=""
 DOMAIN=example.com
 EMAIL=user@${DOMAIN}
 INT_VAR=1
@@ -7,3 +9,4 @@ LIST_VAR=item1:item2
 DB_URL=sqlite:///db.sqlite3
 EMAIL_URL=dummy:
 SECRET_KEY=notsosecret
+# vim:ft=sh:
