--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "0.2.2"
+version = "0.2.3"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -82,7 +82,8 @@ exclude = """
     env,
     __pycache__,
     docs/conf.py,
-    tests
+    tests,
+    build
 """
 
 [build-system]
