Pin dependency versions
Add docs/requirements.txt to make RTD use sphinx==2.2.0
Remove sphinxcontrib-napoleon which is included in sphinx
Replace alexf91/flake8-docstrings with flake8-docstrings==1.4.0

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,10 +2,7 @@ version: 2
 python:
     version: 3.7
     install:
-        - method: pip
-          path: .
-          extra_requirements:
-              - docs
+        - requirements: docs/requirements.txt
     system_packages: false
 sphinx:
     builder: html
