--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.2.1"
+version = "1.3.0"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -25,7 +25,6 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3 :: Only",
@@ -35,7 +34,7 @@ classifiers = [
 include = "yaenv"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 
 [tool.poetry.dependencies.cached-property]
 version = "^1.5.1"
@@ -74,5 +73,5 @@ length_sort = false
 multi_line_output = 6
 
 [build-system]
-requires = ["poetry==1.0.0b8"]
+requires = ["poetry==1.0.0"]
 build-backend = "poetry.masonry.api"
