--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.3.0"
+version = "1.4.0"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -25,7 +25,6 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3 :: Only",
 ]
@@ -34,17 +33,13 @@ classifiers = [
 include = "yaenv"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-
-[tool.poetry.dependencies.cached-property]
-version = "^1.5.1"
-python = "<3.8"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.3.1"
+pytest = "^5.3.2"
 pytest-cov = "^2.8.1"
 # pytest-pspec = "^0.0.4"
-sphinx = "^2.2.2"
+sphinx = "^2.3.1"
 sphinx-rtd-theme = "^0.4.3"
 flake8 = "^3.7.9"
 flake8-docstrings = "^1.5.0"
@@ -73,5 +68,5 @@ length_sort = false
 multi_line_output = 6
 
 [build-system]
-requires = ["poetry==1.0.0"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
