Fix missing coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,11 @@ classifiers = [
     "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
 [[tool.poetry.packages]]
@@ -36,10 +38,10 @@ include = "yaenv"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.3.2"
+pytest = "^5.3.5"
 pytest-cov = "^2.8.1"
 # pytest-pspec = "^0.0.4"
-sphinx = "^2.3.1"
+sphinx = "^2.4.3"
 sphinx-rtd-theme = "^0.4.3"
 flake8 = "^3.7.9"
 flake8-docstrings = "^1.5.0"
