--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,12 @@ jobs:
         - source "$HOME/.poetry/env"
       install: poetry install
       script:
-        - poetry run flake8 --docstring-convention=numpy yaenv
+        - |
+          poetry run flake8 --max-line-length=80 \
+            --docstring-convention=numpy --show-source yaenv
+        - |
+          poetry run mypy --pretty --strict \
+            --no-warn-return-any --allow-any-generics -p yaenv
         - |
           poetry run pytest --pspec --cov=yaenv --cov-report=term \
             --cov-report=xml:"$HOME/.cache/codecov/coverage.xml" tests
