--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,8 @@
 version: 2
+build:
+    image: testing
 python:
-    version: 3.7
+    version: 3.9
     install:
         - requirements: docs/requirements.txt
     system_packages: false
