--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,13 +6,10 @@ on:
 name: tests
 jobs:
   tests:
-    if: |
-      contains(github.event.commits[0].message, '[skip ci]') == false &&
-      contains(github.event.commits[0].message, '[ci skip]') == false
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.9]
+        python: ['3.10']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -28,7 +25,7 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.1.0
         with:
-          poetry-version: 1.1.4
+          poetry-version: 1.1.11
       - name: Install dependencies
         run: poetry install
       - name: Lint project
