--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.6.1"
+version = "1.6.2"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -21,14 +21,12 @@ keywords = [
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
 ]
 
 [[tool.poetry.packages]]
@@ -38,13 +36,13 @@ include = "yaenv"
 python = "^3.10"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.910"
+mypy = "^0.971"
 pydocstyle = "^6.1.1"
-pylint = "^2.12.2"
-pytest = "^6.2.5"
+pylint = "^2.14.5"
+pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pytest-pspec = "^0.0.4"
-sphinx = "~4.3.1"
+sphinx = "~5.1.1"
 sphinx-rtd-theme = "^1.0.0"
 
 [tool.poetry.urls]
