--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,13 +6,10 @@ on:
 name: tests
 jobs:
   tests:
-    if: |
-      contains(github.event.commits[0].message, '[skip ci]') == false &&
-      contains(github.event.commits[0].message, '[ci skip]') == false
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.9]
+        python: ['3.9']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -28,15 +25,14 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.1.0
         with:
-          poetry-version: 1.1.4
+          poetry-version: 1.1.12
       - name: Install dependencies
         run: poetry install
       - name: Lint project
-        run: |
-          poetry run flake8 --max-line-length=80 \
-            --docstring-convention=numpy --show-source yaenv && \
-          poetry run mypy --pretty --strict \
-            --no-warn-return-any --allow-any-generics -p yaenv
+        run: >-
+          poetry run pylint yaenv &&
+          poetry run mypy -p yaenv &&
+          poetry run pydocstyle yaenv
       - name: Run tests
         run: poetry run pytest --cov-report=xml
       - name: Upload coverage to codecov
