--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,6 @@
 version: 2
 python:
-    version: 3.7
+    version: '3.7'
     install:
         - requirements: docs/requirements.txt
     system_packages: false
