--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.4.2"
+version = "1.4.3"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -21,31 +21,33 @@ keywords = [
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
 ]
 
 [[tool.poetry.packages]]
 include = "yaenv"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "~3.8"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^3.8.2"
-flake8-docstrings = "^1.5.0"
-mypy = "^0.780"
-pytest = "^5.4.3"
-pytest-cov = "^2.9.0"
+mypy = "^0.971"
+pylint = "^2.14.5"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 pytest-pspec = "^0.0.4"
-sphinx = "^3.0.4"
-sphinx-rtd-theme = "^0.4.3"
+sphinx = "~5.1.1"
+sphinx-rtd-theme = "^1.0.0"
+
+[tool.poetry.dev-dependencies."pydocstyle"]
+version = "^6.1.1"
+extras = ["toml"]
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
@@ -58,6 +60,30 @@ report = {fail_under = 90}
 testpaths = ["tests"]
 required_plugins = ["pytest-cov", "pytest-pspec"]
 addopts = ["--pspec", "--cov", "--cov-report=term"]
+filterwarnings = ["ignore:NotImplemented:DeprecationWarning"]
+
+[tool.pylint.message_control]
+max-line-length = 80
+disable = [
+    "no-member",
+    "invalid-name",
+    "too-many-branches",
+    "wrong-import-order",
+    "raise-missing-from",
+    "unspecified-encoding",
+    "undefined-loop-variable",
+    "unsupported-assignment-operation"
+]
+
+[tool.pydocstyle]
+convention = "numpy"
+add-select = "D213,D415,D417"
+
+[tool.mypy]
+pretty = true
+strict = true
+warn_return_any = false
+allow_any_generics = true
 
 [tool.isort]
 balanced_wrapping = true
@@ -67,5 +93,5 @@ length_sort = false
 multi_line_output = 6
 
 [build-system]
-requires = ["poetry>=1.0"]
+requires = ["poetry>=1.1"]
 build-backend = "poetry.masonry.api"
