--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.3.2.post1"
+version = "1.3.3"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -21,38 +21,37 @@ keywords = [
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
 ]
 
 [[tool.poetry.packages]]
 include = "yaenv"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7.2"
 
 [tool.poetry.dependencies.cached-property]
 version = "^1.5.1"
 python = "<3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.3.1"
-pytest-cov = "^2.8.1"
-# pytest-pspec = "^0.0.4"
-sphinx = "^2.2.2"
-sphinx-rtd-theme = "^0.4.3"
-flake8 = "^3.7.9"
-flake8-docstrings = "^1.5.0"
-flake8-mypy = "^17.8.0"
+mypy = "^0.971"
+pylint = "^2.14.5"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+pytest-pspec = "^0.0.4"
+sphinx = "~5.1.1"
+sphinx-rtd-theme = "^1.0.0"
 
-[tool.poetry.dev-dependencies.pytest-pspec]
-git = "https://github.com/ROpdebee/pytest-pspec"
-branch = "aad7ff1"
+[tool.poetry.dev-dependencies."pydocstyle"]
+version = "^6.1.1"
+extras = ["toml"]
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
@@ -66,6 +65,29 @@ testpaths = ["tests"]
 required_plugins = ["pytest-cov", "pytest-pspec"]
 addopts = ["--pspec", "--cov", "--cov-report=term"]
 
+[tool.pylint.message_control]
+max-line-length = 80
+disable = [
+    "no-member",
+    "invalid-name",
+    "too-many-branches",
+    "wrong-import-order",
+    "raise-missing-from",
+    "unspecified-encoding",
+    "undefined-loop-variable",
+    "unsupported-assignment-operation"
+]
+
+[tool.pydocstyle]
+convention = "numpy"
+add-select = "D213,D415,D417"
+
+[tool.mypy]
+pretty = true
+strict = true
+warn_return_any = false
+allow_any_generics = true
+
 [tool.isort]
 balanced_wrapping = true
 combine_as_imports = true
@@ -74,5 +96,5 @@ length_sort = false
 multi_line_output = 6
 
 [build-system]
-requires = ["poetry==1.0.0"]
+requires = ["poetry>=1.1"]
 build-backend = "poetry.masonry.api"
