Update dependencies and status badge

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.5.2.post1"
+version = "1.5.2.post2"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -36,13 +36,13 @@ include = "yaenv"
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.971"
-pylint = "^2.14.5"
-pytest = "^7.1.2"
-pytest-cov = "^3.0.0"
+mypy = "^0.991"
+pylint = "^2.15.9"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
 pytest-pspec = "^0.0.4"
 sphinx = "~5.1.1"
-sphinx-rtd-theme = "^1.0.0"
+sphinx-rtd-theme = "^1.1.1"
 
 [tool.poetry.dev-dependencies."pydocstyle"]
 version = "^6.1.1"
@@ -50,6 +50,7 @@ extras = ["toml"]
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
+"Donations" = "https://github.com/sponsors/ObserverOfTime"
 
 [tool.coverage]
 run = {source = ["yaenv"]}
