Replace pylint with ruff

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,9 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
+# ruff
+.ruff_cache/
+
 # Pyre type checker
 .pyre/
 
@@ -195,4 +198,4 @@ tags
 [._]*.un~
 
 # Configuration
-.lvimrc
+.nvimrc
