--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ['3.10']
+        python: ['3.10', '3.11']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -25,14 +25,13 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.2.0
         with:
-          poetry-version: 1.3.1
+          poetry-version: 1.3.2
       - name: Install dependencies
         run: poetry install
       - name: Lint project
         run: >-
-          poetry run pylint yaenv &&
-          poetry run mypy -p yaenv &&
-          poetry run pydocstyle yaenv
+          poetry run ruff yaenv &&
+          poetry run mypy -p yaenv
       - name: Run tests
         run: poetry run pytest --cov-report=xml
       - name: Upload coverage to codecov
