--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.6.4.dev2"
+version = "1.6.4"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -40,9 +40,14 @@ mypy = "^1.6.1"
 pytest = "^7.4.2"
 pytest-cov = "^4.1.0"
 pytest-pspec = "^0.0.4"
+ruff = "^0.1.0"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
 sphinx = "~6.2.1"
 sphinx-rtd-theme = "^1.3.0"
-ruff = "^0.1.0"
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
