--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,15 @@
 version: 2
-python:
-    version: '3.8'
-    install:
-        - requirements: docs/requirements.txt
-    system_packages: false
+build:
+    os: ubuntu-22.04
+    tools:
+      python: '3.8'
+    jobs:
+      post_create_environment:
+        - pip install poetry
+        - poetry config virtualenvs.create false
+      post_install:
+        - poetry install --with docs
 sphinx:
     builder: html
     configuration: docs/conf.py
+    fail_on_warning: true
