--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yaenv"
-version = "1.4.3.post2"
+version = "1.4.4"
 readme = "README.rst"
 license = "BSD-3-Clause"
 description = "Yet another dotenv parser for Python."
@@ -36,26 +36,29 @@ include = "yaenv"
 [tool.poetry.dependencies]
 python = "^3.8"
 
-[tool.poetry.dev-dependencies]
-mypy = "^0.991"
-pylint = "^2.15.9"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.6.1"
+pytest = "^7.4.2"
+pytest-cov = "^4.1.0"
 pytest-pspec = "^0.0.4"
-sphinx = "~5.1.1"
-sphinx-rtd-theme = "^1.1.1"
+ruff = "^0.1.0"
 
-[tool.poetry.dev-dependencies."pydocstyle"]
-version = "^6.1.1"
-extras = ["toml"]
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "~6.2.1"
+sphinx-rtd-theme = "^1.3.0"
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
 "Donations" = "https://github.com/sponsors/ObserverOfTime"
 
-[tool.coverage]
-run = {source = ["yaenv"]}
-report = {fail_under = 90}
+[tool.coverage.run]
+source = ["yaenv"]
+
+[tool.coverage.report]
+fail_under = 90
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -63,22 +66,33 @@ required_plugins = ["pytest-cov", "pytest-pspec"]
 addopts = ["--pspec", "--cov", "--cov-report=term"]
 filterwarnings = ["ignore:NotImplemented:DeprecationWarning"]
 
-[tool.pylint.message_control]
-max-line-length = 80
-disable = [
-    "no-member",
-    "invalid-name",
-    "too-many-branches",
-    "wrong-import-order",
-    "raise-missing-from",
-    "unspecified-encoding",
-    "undefined-loop-variable",
-    "unsupported-assignment-operation"
+[tool.ruff]
+line-length = 80
+output-format = "grouped"
+select = ["F", "E", "W", "D", "I", "Q"]
+ignore = [
+    "D107",
+    "D203",
+    "D212",
+    "D402",
+    "D413",
+    "D416"
+]
+extend-select = [
+    "ANN001",
+    "ANN201",
+    "ANN204",
+    "ANN205",
+    "ANN206",
+    "RUF100"
 ]
 
-[tool.pydocstyle]
-convention = "numpy"
-add-select = "D213,D415,D417"
+[tool.ruff.isort]
+combine-as-imports = true
+
+[tool.ruff.flake8-quotes]
+inline-quotes = "single"
+multiline-quotes = "single"
 
 [tool.mypy]
 pretty = true
@@ -86,13 +100,6 @@ strict = true
 warn_return_any = false
 allow_any_generics = true
 
-[tool.isort]
-balanced_wrapping = true
-combine_as_imports = true
-default_section = "THIRDPARTY"
-length_sort = false
-multi_line_output = 6
-
 [build-system]
-requires = ["poetry>=1.1"]
+requires = ["poetry>=1.6"]
 build-backend = "poetry.masonry.api"
