--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,18 +36,18 @@ include = "yaenv"
 python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.6.1"
-pytest = "^7.4.2"
-pytest-cov = "^4.1.0"
+mypy = "^1.11.2"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
 pytest-pspec = "^0.0.4"
-ruff = "^0.1.0"
+ruff = "^0.6.8"
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "~6.2.1"
-sphinx-rtd-theme = "^1.3.0"
+sphinx = "~7.4.7"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.urls]
 "Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
@@ -67,6 +67,8 @@ addopts = ["--pspec", "--cov", "--cov-report=term"]
 [tool.ruff]
 line-length = 80
 output-format = "grouped"
+
+[tool.ruff.lint]
 select = ["F", "E", "W", "D", "I", "Q"]
 ignore = [
     "D107",
@@ -85,10 +87,10 @@ extend-select = [
     "RUF100"
 ]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint.flake8-quotes]
 inline-quotes = "single"
 multiline-quotes = "single"
 
@@ -96,8 +98,8 @@ multiline-quotes = "single"
 pretty = true
 strict = true
 warn_return_any = false
-allow_any_generics = true
+disallow_any_generics = false
 
 [build-system]
-requires = ["poetry>=1.6"]
+requires = ["poetry>=1.8"]
 build-backend = "poetry.masonry.api"
